--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^15.5.2",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
